deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: docs
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: softeq-documentation
  namespace: docs
  labels:
    app: softeq-documentation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: esofteq-documentation
  template:
    metadata:
      labels:
        app: softeq-documentation
    spec:
      imagePullSecrets:
        - name: image-registry
      containers:
        - name: docs
          image: ${IMAGE_TAG}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: softeq-documentation
  namespace: docs
  labels:
    app: softeq-documentation
spec:
  selector:
    app: softeq-documentation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: softeq-documentation
  namespace: docs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-peering
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: https://www.softeq.com/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: softeq-documentation
            port: 
              number: 80
  tls:
  - secretName: tls-ingress-peering
    hosts:
      - https://www.softeq.com/
